# rust-escaper

./: .travis.yml  Cargo.toml  README.md
benches/: bench.rs
src/: decode.rs  encode.rs  io_support.rs  lib.rs
tests/: test.rs
