[package]
name = "escaper"
version = "0.1.0"
authors = [ "dignifiedquire <dignifiedquire@gmail.com>", "Viktor Dahl <pazaconyoman@gmail.com>" ]
license = "Apache-2.0 / MIT / MPL-2.0"
homepage = "https://github.com/dignifiedquire/rust-escaper"
repository = "https://github.com/dignifiedquire/rust-escaper"
description = "A library for HTML entity encoding and decoding"
edition = "2018"
readme = "README.md"
keywords = ["html", "parsing", "encoding", "decoding", "xml"]
categories = ["parsing", "web-programming", "email"]

[dev-dependencies]
rand = "0.4"

[dependencies]
entities = "1.0.1"
